correct OverFlow

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -17,7 +17,7 @@ b{
       height: 100vh;
       padding: 2%;
       float: left;
-      overflow: auto;
+      overflow: hidden;
 
 }
 .avatarBox{
